force-app/main/default/objects/JBCXM__ScorecardConfig__c/JBCXM__ScorecardConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object is used to store the Scorecard global configuration</description>
    <label>Scorecard Configuration</label>
</CustomObject>