force-app/main/default/objects/JBCXM__ScorecardConfig__c/fields/JBCXM__CustomerRollup__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerRollup__c</fullName>
    <description>This is used to specify what mechanism you are using to calculate the customer overall score. For Example - Disabled, Weight, Sum</description>
    <label>Customer Rollup</label>
    <length>40</length>
    <type>Text</type>
</CustomField>