force-app/main/default/objects/JBCXM__ScorecardConfig__c/fields/JBCXM__HistoryTrackingFrequency__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HistoryTrackingFrequency__c</fullName>
    <label>History Tracking Frequency</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>