force-app/main/default/objects/JBCXM__ScorecardConfig__c/fields/JBCXM__IsHistoryEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsHistoryEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scorecard History Enabled</label>
    <type>Checkbox</type>
</CustomField>