force-app/main/default/objects/JBCXM__ScorecardConfig__c/fields/JBCXM__OverrideCustomer__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OverrideCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is not applicable if  Customer roll up is &quot;Disabled&quot;</description>
    <label>OverrideCustomer</label>
    <type>Checkbox</type>
</CustomField>