force-app/main/default/objects/JBCXM__ScorecardConfig__c/fields/JBCXM__ScorecardEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScorecardEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is used to check whether the Scorecard is enabled or not.</description>
    <label>Is Scorecard Enabled</label>
    <type>Checkbox</type>
</CustomField>