force-app/main/default/objects/JBCXM__ScorecardConfig__c/fields/JBCXM__TrackHistory__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TrackHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to enable/disable the history tracking.</description>
    <label>TrackHistory</label>
    <type>Checkbox</type>
</CustomField>